notebooks: svm-builder updates (2)

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,6 @@
       "../datasets/csvs/column_shifts_ctx_p/form.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/func.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/pred.csv\n",
-      "../datasets/csvs/column_shifts_ctx_p/pred_bkp.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/lemma.csv\n",
       "../datasets/csvs/column_shifts_ctx_p/gpos.csv\n",
       "../datasets/csvs/column_t/t.csv\n",
@@ -125,7 +124,7 @@
       "       ...\n",
       "       'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1',\n",
       "       'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'],\n",
-      "      dtype='object', length=164)\n"
+      "      dtype='object', length=163)\n"
      ]
     }
    ],
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'LEMMA', 'MORF', 'PRED'])\n",
-      "dict_keys(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED', 'ARG', 'FORM+1', 'FORM+2', 'FORM+3', 'FORM-1', 'FORM-2', 'FORM-3', 'FUNC+1', 'FUNC+2', 'FUNC+3', 'FUNC-1', 'FUNC-2', 'FUNC-3', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'LEMMA-1', 'LEMMA-2', 'LEMMA-3', 'GPOS+1', 'GPOS+2', 'GPOS+3', 'GPOS-1', 'GPOS-2', 'GPOS-3', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1', 'FUNC_CTX_P-1', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'LEMMA_CTX_P-1', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1', 'GPOS_CTX_P-1', 'PRED_DIST'])\n"
+      "dict_keys(['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'LEMMA', 'MORF', 'PRED', 'T'])\n",
+      "dict_keys(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED', 'ARG', 'FORM+1', 'FORM+2', 'FORM+3', 'FORM-1', 'FORM-2', 'FORM-3', 'FUNC+1', 'FUNC+2', 'FUNC+3', 'FUNC-1', 'FUNC-2', 'FUNC-3', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'LEMMA-1', 'LEMMA-2', 'LEMMA-3', 'GPOS+1', 'GPOS+2', 'GPOS+3', 'GPOS-1', 'GPOS-2', 'GPOS-3', 'FORM_CTX_P+0', 'FORM_CTX_P+1', 'FORM_CTX_P+2', 'FORM_CTX_P+3', 'FORM_CTX_P-1', 'FORM_CTX_P-2', 'FORM_CTX_P-3', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1', 'FUNC_CTX_P+2', 'FUNC_CTX_P+3', 'FUNC_CTX_P-1', 'FUNC_CTX_P-2', 'FUNC_CTX_P-3', 'PRED_CTX_P+0', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'LEMMA_CTX_P+2', 'LEMMA_CTX_P+3', 'LEMMA_CTX_P-1', 'LEMMA_CTX_P-2', 'LEMMA_CTX_P-3', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1', 'GPOS_CTX_P+2', 'GPOS_CTX_P+3', 'GPOS_CTX_P-1', 'GPOS_CTX_P-2', 'GPOS_CTX_P-3', 'T', 'PRED_DIST', 'PredMorph_01', 'PredMorph_02', 'PredMorph_03', 'PredMorph_04', 'PredMorph_05', 'PredMorph_06', 'PredMorph_07', 'PredMorph_08', 'PredMorph_09', 'PredMorph_10', 'PredMorph_11', 'PredMorph_12', 'PredMorph_13', 'PredMorph_14', 'PredMorph_15', 'PredMorph_16', 'PredMorph_17', 'PredMorph_18', 'PredMorph_19', 'PredMorph_20', 'PredMorph_21', 'PredMorph_22', 'PredMorph_23', 'PredMorph_24', 'PredMorph_25', 'PredMorph_26', 'PredMorph_27', 'PredMorph_28', 'PredMorph_29', 'PredMorph_30', 'PredMorph_31', 'PredMorph_32', 'PredMorph_33', 'PredMorph_34', 'PRED_MARKER', 'PASSIVE_VOICE', 'FUNC_00', 'FUNC_01', 'FUNC_02', 'FUNC_03', 'FUNC_04', 'FUNC_05', 'FUNC_06', 'FUNC_07', 'FUNC_08', 'FUNC_09', 'FUNC_10', 'FUNC_11', 'FUNC_12', 'FUNC_13', 'FUNC_14', 'FUNC_15', 'FUNC_16', 'FUNC_17', 'FUNC_18', 'FUNC_19', 'FUNC_20', 'FUNC_21', 'FUNC_CHILD_1', 'FUNC_CHILD_2', 'FUNC_CHILD_3', 'FUNC_GRAND_PARENT', 'FUNC_PARENT', 'LEMMA_CHILD_1', 'LEMMA_CHILD_2', 'LEMMA_CHILD_3', 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT', 'GPOS_00', 'GPOS_01', 'GPOS_02', 'GPOS_03', 'GPOS_04', 'GPOS_05', 'GPOS_06', 'GPOS_07', 'GPOS_08', 'GPOS_09', 'GPOS_10', 'GPOS_11', 'GPOS_12', 'GPOS_13', 'GPOS_14', 'GPOS_15', 'GPOS_16', 'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1', 'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'])\n"
      ]
     }
    ],
@@ -260,11 +259,18 @@
     "          'FUNC_CTX_P-1', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1']\n",
     "\n",
     "\n",
-    "columns_morph = ['PredMorph_{:}'.format(i + 1) for i in range(34)]\n",
+    "columns_morph = ['PredMorph_{:02d}'.format(i + 1) for i in range(34)]\n",
     "columns_pred = ['PRED_DIST', 'PASSIVE_VOICE']\n",
     "\n",
-    "columns_dtree = []\n",
+    "columns_dtree = ['LEMMA_CHILD_1', 'LEMMA_CHILD_2', 'LEMMA_CHILD_3', 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT',\n",
+    "                 'GPOS_CHILD_1', 'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT',\n",
+    "                 'FUNC_CHILD_1', 'FUNC_CHILD_2', 'FUNC_CHILD_3', 'FUNC_GRAND_PARENT', 'FUNC_PARENT']\n",
     "\n",
+    "columns_paths   = ['GPOS_{:02d}'.format(i) for i in range(22)] +\\\n",
+    "        ['FUNC_{:02d}'.format(i) for i in range(22)]\n",
+    "\n",
+    "columns = columns_gs + columns_win + columns_ctxp +\\\n",
+    "        columns_morph + columns_pred + columns_dtree + columns_paths\n",
     "\n",
     "d = df.to_dict()\n",
     "\n",
@@ -274,54 +280,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1000: 1,\n",
-       " 14001: 1,\n",
-       " 22368: 1,\n",
-       " 22387: 1,\n",
-       " 22418: 1,\n",
-       " 22512: 1,\n",
-       " 22552: 1,\n",
-       " 22747: 1,\n",
-       " 23628: 1,\n",
-       " 36918: 1,\n",
-       " 50208: 1,\n",
-       " 76627: 1,\n",
-       " 85109: 1,\n",
-       " 100999: 1,\n",
-       " 103368: 1,\n",
-       " 112439: 1,\n",
-       " 121510: 1,\n",
-       " 139542: 1,\n",
-       " 140728: 1,\n",
-       " 156191: 1,\n",
-       " 157794: 1,\n",
-       " 157819: 1,\n",
-       " 157844: 1,\n",
-       " 157891: 1,\n",
-       " 157911: 1,\n",
-       " 157933: 1,\n",
-       " 157944: 1,\n",
-       " 157993: 1,\n",
-       " 158042: 1,\n",
-       " 158126: 1,\n",
-       " 158174: 1,\n",
-       " 158198: 1,\n",
-       " 158252: 1,\n",
-       " 158278: 1,\n",
-       " 158306: 1,\n",
-       " 165781: 1,\n",
-       " 169132: 1,\n",
-       " 179804: 1,\n",
-       " 185526: 1}"
+       "{915: 1,\n",
+       " 13299: 1,\n",
+       " 13357: 1,\n",
+       " 14146: 1,\n",
+       " 22437: 1,\n",
+       " 23463: 1,\n",
+       " 39671: 1,\n",
+       " 50043: 1,\n",
+       " 50136: 1,\n",
+       " 50141: 1,\n",
+       " 59212: 1,\n",
+       " 68283: 1,\n",
+       " 79665: 1,\n",
+       " 94117: 1,\n",
+       " 101404: 1,\n",
+       " 104567: 1,\n",
+       " 104592: 1,\n",
+       " 104617: 1,\n",
+       " 104650: 1,\n",
+       " 104690: 1,\n",
+       " 104694: 1,\n",
+       " 105620: 1,\n",
+       " 105746: 1,\n",
+       " 105789: 1,\n",
+       " 105797: 1,\n",
+       " 105827: 1,\n",
+       " 105910: 1,\n",
+       " 105919: 1,\n",
+       " 105966: 1,\n",
+       " 105967: 1,\n",
+       " 105968: 1,\n",
+       " 105969: 1,\n",
+       " 105970: 1,\n",
+       " 105971: 1,\n",
+       " 105972: 1,\n",
+       " 105973: 1,\n",
+       " 105974: 1,\n",
+       " 105975: 1,\n",
+       " 105976: 1,\n",
+       " 105977: 1,\n",
+       " 105978: 1,\n",
+       " 105979: 1,\n",
+       " 105980: 1,\n",
+       " 105981: 1,\n",
+       " 105982: 1,\n",
+       " 105983: 1,\n",
+       " 105984: 1,\n",
+       " 105985: 1,\n",
+       " 105986: 1,\n",
+       " 105987: 1,\n",
+       " 105988: 1,\n",
+       " 105989: 1,\n",
+       " 105990: 1,\n",
+       " 105991: 1,\n",
+       " 105992: 1,\n",
+       " 105993: 1,\n",
+       " 105994: 1,\n",
+       " 105995: 1,\n",
+       " 105996: 1,\n",
+       " 105997: 1,\n",
+       " 105998: 1,\n",
+       " 105999: 1,\n",
+       " 106000: 1,\n",
+       " 106001: 1,\n",
+       " 106002: 1,\n",
+       " 115073: 1,\n",
+       " 124144: 1,\n",
+       " 133215: 1,\n",
+       " 150344: 1,\n",
+       " 151357: 1,\n",
+       " 151382: 1,\n",
+       " 151407: 1,\n",
+       " 151432: 1,\n",
+       " 151477: 1,\n",
+       " 151482: 1,\n",
+       " 151531: 1,\n",
+       " 151580: 1,\n",
+       " 151629: 1,\n",
+       " 151720: 1,\n",
+       " 151744: 1,\n",
+       " 151772: 1,\n",
+       " 151777: 1,\n",
+       " 151802: 1,\n",
+       " 151827: 1,\n",
+       " 151852: 1,\n",
+       " 151877: 1,\n",
+       " 151902: 1,\n",
+       " 151927: 1,\n",
+       " 151952: 1,\n",
+       " 151977: 1,\n",
+       " 152002: 1,\n",
+       " 152027: 1,\n",
+       " 152052: 1,\n",
+       " 152077: 1,\n",
+       " 152102: 1,\n",
+       " 152127: 1,\n",
+       " 152152: 1,\n",
+       " 152177: 1,\n",
+       " 152202: 1,\n",
+       " 152227: 1,\n",
+       " 152252: 1,\n",
+       " 152285: 1,\n",
+       " 152368: 1,\n",
+       " 152375: 1,\n",
+       " 152424: 1,\n",
+       " 152473: 1,\n",
+       " 152522: 1,\n",
+       " 152571: 1,\n",
+       " 152620: 1,\n",
+       " 152669: 1,\n",
+       " 152718: 1,\n",
+       " 152767: 1,\n",
+       " 152816: 1,\n",
+       " 152865: 1,\n",
+       " 152914: 1,\n",
+       " 152963: 1,\n",
+       " 153012: 1,\n",
+       " 153061: 1,\n",
+       " 153110: 1,\n",
+       " 153159: 1,\n",
+       " 153208: 1,\n",
+       " 153257: 1,\n",
+       " 153306: 1}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[15, 28, 15, 32, 26]"
+       "[59, 1, 59, 60, 58]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -408,40 +498,16 @@
        "      <th>DTREE</th>\n",
        "      <th>FUNC</th>\n",
        "      <th>...</th>\n",
-       "      <th>FUNC_CTX_P+0</th>\n",
-       "      <th>FUNC_CTX_P+1</th>\n",
-       "      <th>FUNC_CTX_P-1</th>\n",
-       "      <th>LEMMA_CTX_P+0</th>\n",
-       "      <th>LEMMA_CTX_P+1</th>\n",
-       "      <th>LEMMA_CTX_P-1</th>\n",
-       "      <th>GPOS_CTX_P+0</th>\n",
-       "      <th>GPOS_CTX_P+1</th>\n",
-       "      <th>GPOS_CTX_P-1</th>\n",
-       "      <th>PRED_DIST</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>INDEX</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>GPOS_17</th>\n",
+       "      <th>GPOS_18</th>\n",
+       "      <th>GPOS_19</th>\n",
+       "      <th>GPOS_20</th>\n",
+       "      <th>GPOS_21</th>\n",
+       "      <th>GPOS_CHILD_1</th>\n",
+       "      <th>GPOS_CHILD_2</th>\n",
+       "      <th>GPOS_CHILD_3</th>\n",
+       "      <th>GPOS_GRAND_PARENT</th>\n",
+       "      <th>GPOS_PARENT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -458,39 +524,36 @@
        "      <td>5</td>\n",
        "      <td>ADVL</td>\n",
        "      <td>...</td>\n",
-       "      <td>STA</td>\n",
-       "      <td>&gt;N</td>\n",
-       "      <td>ADVL</td>\n",
-       "      <td>revelar</td>\n",
-       "      <td>um</td>\n",
-       "      <td>hoje</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>V-FIN</td>\n",
-       "      <td>ART</td>\n",
-       "      <td>ADV</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 47 columns</p>\n",
+       "<p>1 rows × 163 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       ID  S  P  P_S      FORM     LEMMA  GPOS MORF  DTREE  FUNC    ...     \\\n",
-       "INDEX                                                               ...      \n",
-       "0       1  1  1    0  Brasília  Brasília  PROP  F|S      5  ADVL    ...      \n",
+       "   ID  S  P  P_S      FORM     LEMMA  GPOS MORF  DTREE  FUNC     ...      \\\n",
+       "0   1  1  1    0  Brasília  Brasília  PROP  F|S      5  ADVL     ...       \n",
        "\n",
-       "      FUNC_CTX_P+0 FUNC_CTX_P+1 FUNC_CTX_P-1 LEMMA_CTX_P+0 LEMMA_CTX_P+1  \\\n",
-       "INDEX                                                                      \n",
-       "0              STA           >N         ADVL       revelar            um   \n",
+       "  GPOS_17 GPOS_18 GPOS_19 GPOS_20 GPOS_21 GPOS_CHILD_1 GPOS_CHILD_2  \\\n",
+       "0     NaN     NaN     NaN     NaN     NaN          NaN          NaN   \n",
        "\n",
-       "      LEMMA_CTX_P-1 GPOS_CTX_P+0 GPOS_CTX_P+1 GPOS_CTX_P-1 PRED_DIST  \n",
-       "INDEX                                                                 \n",
-       "0              hoje        V-FIN          ART          ADV         4  \n",
+       "  GPOS_CHILD_3 GPOS_GRAND_PARENT GPOS_PARENT  \n",
+       "0          NaN               NaN       V-FIN  \n",
        "\n",
-       "[1 rows x 47 columns]"
+       "[1 rows x 163 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +583,7 @@
        "['*', 'A0', 'A0', 'A0', 'V']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -554,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
