--- a/notebooks/07-evaluations_consolidate.ipynb
+++ b/notebooks/07-evaluations_consolidate.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -168,17 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "svm: 2.3 0.82\n",
       "svm: 2.36 0.71\n",
+      "svm: 2.36 0.71\n",
+      "svm: 1.48 1.16\n",
       "svm: 2.81 0.77\n",
+      "svm: 1.05 0.84\n",
+      "svm: 2.81 0.81\n",
       "svm: 2.66 1.02\n",
-      "svm: 2.81 0.67\n"
+      "svm: 2.81 0.67\n",
+      "svm: 2.7 0.78\n"
      ]
     }
    ],
@@ -223,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +287,26 @@
        "      <td>5.00e-04</td>\n",
        "      <td>16x16x16x16</td>\n",
        "      <td>1</td>\n",
+       "      <td>glove/s50</td>\n",
+       "      <td>44.67</td>\n",
+       "      <td>64.37</td>\n",
+       "      <td>1.441012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>dblstm</td>\n",
+       "      <td>crf</td>\n",
+       "      <td>4.01</td>\n",
+       "      <td>5.00e-04</td>\n",
+       "      <td>16x16x16x16</td>\n",
+       "      <td>1</td>\n",
        "      <td>wang2vec/s50</td>\n",
        "      <td>43.39</td>\n",
        "      <td>96.65</td>\n",
        "      <td>2.227472</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>26</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -326,7 +345,7 @@
        "      <td>2.379716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>28</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -430,7 +449,7 @@
        "      <td>1.910923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>23</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -456,7 +475,7 @@
        "      <td>2.739439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <th>30</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.01</td>\n",
@@ -482,7 +501,7 @@
        "      <td>2.988865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
+       "      <th>33</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -495,7 +514,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>27</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -521,7 +540,7 @@
        "      <td>2.083799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>29</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -534,7 +553,7 @@
        "      <td>3.713376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <th>32</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -573,7 +592,7 @@
        "      <td>4.100041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>31</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>1.00</td>\n",
@@ -612,7 +631,7 @@
        "      <td>1.395248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>24</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.00</td>\n",
@@ -677,7 +696,7 @@
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>25</th>\n",
        "      <td>dblstm</td>\n",
        "      <td>crf</td>\n",
        "      <td>4.02</td>\n",
@@ -697,10 +716,11 @@
        "     model predictor              version        lr       hidden ctx-p  \\\n",
        "16  dblstm       crf  3.sanity-check.2.00  5.00e-04  32x32x32x32     1   \n",
        "21  dblstm       crf                 4.01  5.00e-04  16x16x16x16     1   \n",
-       "25  dblstm       crf                 4.00  5.00e-04        32x16     1   \n",
+       "22  dblstm       crf                 4.01  5.00e-04  16x16x16x16     1   \n",
+       "26  dblstm       crf                 4.00  5.00e-04        32x16     1   \n",
        "0    blstm       crf                 2.00  1.00e-03       128x64     1   \n",
        "2    blstm       crf                 2.00  5.00e-04       128x64     1   \n",
-       "27  dblstm       crf                 4.00  5.00e-04  32x32x32x32     3   \n",
+       "28  dblstm       crf                 4.00  5.00e-04  32x32x32x32     3   \n",
        "17  dblstm       crf    3.sanity-check.00  5.00e-04  16x16x16x16     3   \n",
        "12  dblstm       crf                 3.02  5.00e-04        32x32     1   \n",
        "14  dblstm       crf                 3.00  5.00e-04  32x32x32x32     1   \n",
@@ -708,34 +728,35 @@
        "4    blstm       crf                 2.00  5.00e-04  16x16x16x16     1   \n",
        "1    blstm       crf                 2.00  1.00e-03    128x64x32     3   \n",
        "20  dblstm       crf                 4.00  5.00e-04  16x16x16x16     1   \n",
-       "22  dblstm       crf                 4.00  5.00e-04  16x16x16x16     3   \n",
+       "23  dblstm       crf                 4.00  5.00e-04  16x16x16x16     3   \n",
        "6    blstm       crf                 2.00  5.00e-04  32x32x32x32     1   \n",
-       "29  dblstm       crf                 4.01  5.00e-04  64x64x64x64     3   \n",
+       "30  dblstm       crf                 4.01  5.00e-04  64x64x64x64     3   \n",
        "9   dblstm       crf                 2.00  5.00e-04       128x64     1   \n",
-       "32  dblstm       crf                 1.00  5.00e-04           16     1   \n",
-       "26  dblstm       crf                 4.00  5.00e-04     32x32x32     3   \n",
+       "33  dblstm       crf                 1.00  5.00e-04           16     1   \n",
+       "27  dblstm       crf                 4.00  5.00e-04     32x32x32     3   \n",
        "19  dblstm       crf                 4.00  5.00e-04      127x127     1   \n",
-       "28  dblstm       crf                 4.00  5.00e-04  64x64x64x64     3   \n",
-       "31  dblstm       crf                 1.00  1.00e-04           96     1   \n",
+       "29  dblstm       crf                 4.00  5.00e-04  64x64x64x64     3   \n",
+       "32  dblstm       crf                 1.00  1.00e-04           96     1   \n",
        "7    blstm   softmax                 1.00  5.00e-04      128x128     1   \n",
        "8    blstm   softmax                 1.00  5.00e-04  32x32x32x32     1   \n",
-       "30  dblstm       crf                 1.00  1.00e-04            8     1   \n",
+       "31  dblstm       crf                 1.00  1.00e-04            8     1   \n",
        "10  dblstm       crf                 2.01  5.00e-04       128x64     1   \n",
        "5    blstm       crf                 2.00  5.00e-04          256     1   \n",
-       "23  dblstm       crf                 4.00  5.00e-04   256x126x64     3   \n",
+       "24  dblstm       crf                 4.00  5.00e-04   256x126x64     3   \n",
        "13  dblstm       crf                 3.00  5.00e-04     32x32x32     3   \n",
        "3    blstm       crf                 2.01  5.00e-04       128x64     1   \n",
        "15  dblstm       crf                 3.00  5.00e-04     64x64x64     3   \n",
        "11  dblstm       crf                 2.00  5.00e-04      512x128     3   \n",
-       "24  dblstm       crf                 4.02  5.00e-04           32     1   \n",
+       "25  dblstm       crf                 4.02  5.00e-04           32     1   \n",
        "\n",
        "      embeddings  valid-f1  train-f1  ratio-f1  \n",
        "16     glove/s50     96.68     99.45  1.028651  \n",
-       "21  wang2vec/s50     43.39     96.65  2.227472  \n",
-       "25     glove/s50     42.82     67.20  1.569360  \n",
+       "21     glove/s50     44.67     64.37  1.441012  \n",
+       "22  wang2vec/s50     43.39     96.65  2.227472  \n",
+       "26     glove/s50     42.82     67.20  1.569360  \n",
        "0      glove/s50     41.61     99.02  2.379716  \n",
        "2      glove/s50     41.61     99.02  2.379716  \n",
-       "27  wang2vec/s50     40.04     99.45  2.483766  \n",
+       "28  wang2vec/s50     40.04     99.45  2.483766  \n",
        "17     glove/s50     39.92     67.77  1.697645  \n",
        "12     glove/s50     38.38     65.90  1.717040  \n",
        "14     glove/s50     38.06     92.15  2.421177  \n",
@@ -743,29 +764,29 @@
        "4      glove/s50     37.91     78.65  2.074650  \n",
        "1      glove/s50     37.75     99.22  2.628344  \n",
        "20     glove/s50     37.72     72.08  1.910923  \n",
-       "22     glove/s50     35.44     85.68  2.417607  \n",
+       "23     glove/s50     35.44     85.68  2.417607  \n",
        "6      glove/s50     33.85     92.73  2.739439  \n",
-       "29     glove/s50     33.33     98.69  2.960996  \n",
+       "30     glove/s50     33.33     98.69  2.960996  \n",
        "9      glove/s50     33.23     99.32  2.988865  \n",
-       "32     glove/s50     30.70       NaN       NaN  \n",
-       "26     glove/s50     28.85     99.45  3.447140  \n",
+       "33     glove/s50     30.70       NaN       NaN  \n",
+       "27     glove/s50     28.85     99.45  3.447140  \n",
        "19     glove/s50     28.64     59.68  2.083799  \n",
-       "28     glove/s50     26.69     99.11  3.713376  \n",
-       "31     glove/s50     24.92       NaN       NaN  \n",
+       "29     glove/s50     26.69     99.11  3.713376  \n",
+       "32     glove/s50     24.92       NaN       NaN  \n",
        "7      glove/s50     24.62     74.17  3.012591  \n",
        "8      glove/s50     24.19     99.18  4.100041  \n",
-       "30     glove/s50     22.04       NaN       NaN  \n",
+       "31     glove/s50     22.04       NaN       NaN  \n",
        "10     glove/s50     20.39     41.09  2.015204  \n",
        "5      glove/s50     13.89     19.38  1.395248  \n",
-       "23     glove/s50      8.45     15.49  1.833136  \n",
+       "24     glove/s50      8.45     15.49  1.833136  \n",
        "13     glove/s50      1.18      1.84  1.559322  \n",
        "3      glove/s50      0.68      1.82  2.676471  \n",
        "15     glove/s50      0.55      0.57  1.036364  \n",
        "11     glove/s50      0.30      0.00  0.000000  \n",
-       "24     glove/s50      0.05      0.07  1.400000  "
+       "25     glove/s50      0.05      0.07  1.400000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
