--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -24,6 +24,7 @@
     "import glob \n",
     "import re\n",
     "import math\n",
+    "from numpy import isnan\n",
     "from gensim.models import KeyedVectors\n",
     "from data_propbankbr import propbankbr_arg2t\n",
     "\n",
@@ -235,6 +236,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'ID': 1, 'S': 1, 'P': 1, 'P_S': 1, 'FORM': 13290, 'LEMMA': 9071, 'GPOS': 25, 'MORF': 112, 'DTREE': 91, 'FUNC': 49, 'CTREE': 310, 'PRED': 1027, 'ARG': 60, 'FORM+1': 13290, 'FORM+2': 13290, 'FORM+3': 13290, 'FORM-1': 13290, 'FORM-2': 13290, 'FORM-3': 13290, 'FUNC+1': 49, 'FUNC+2': 49, 'FUNC+3': 49, 'FUNC-1': 49, 'FUNC-2': 49, 'FUNC-3': 49, 'LEMMA+1': 9071, 'LEMMA+2': 9071, 'LEMMA+3': 9071, 'LEMMA-1': 9071, 'LEMMA-2': 9071, 'LEMMA-3': 9071, 'GPOS+1': 25, 'GPOS+2': 25, 'GPOS+3': 25, 'GPOS-1': 25, 'GPOS-2': 25, 'GPOS-3': 25, 'FORM_CTX_P+0': 13290, 'FORM_CTX_P+1': 13290, 'FORM_CTX_P+2': 13290, 'FORM_CTX_P+3': 13290, 'FORM_CTX_P-1': 13290, 'FORM_CTX_P-2': 13290, 'FORM_CTX_P-3': 13290, 'FUNC_CTX_P+0': 49, 'FUNC_CTX_P+1': 49, 'FUNC_CTX_P+2': 49, 'FUNC_CTX_P+3': 49, 'FUNC_CTX_P-1': 49, 'FUNC_CTX_P-2': 49, 'FUNC_CTX_P-3': 49, 'PRED_CTX_P+0': 1027, 'LEMMA_CTX_P+0': 9071, 'LEMMA_CTX_P+1': 9071, 'LEMMA_CTX_P+2': 9071, 'LEMMA_CTX_P+3': 9071, 'LEMMA_CTX_P-1': 9071, 'LEMMA_CTX_P-2': 9071, 'LEMMA_CTX_P-3': 9071, 'GPOS_CTX_P+0': 25, 'GPOS_CTX_P+1': 25, 'GPOS_CTX_P+2': 25, 'GPOS_CTX_P+3': 25, 'GPOS_CTX_P-1': 25, 'GPOS_CTX_P-2': 25, 'GPOS_CTX_P-3': 25, 'T': 36, 'PRED_DIST': 1, 'PredMorph_01': 1, 'PredMorph_02': 1, 'PredMorph_03': 1, 'PredMorph_04': 1, 'PredMorph_05': 1, 'PredMorph_06': 1, 'PredMorph_07': 1, 'PredMorph_08': 1, 'PredMorph_09': 1, 'PredMorph_10': 1, 'PredMorph_11': 1, 'PredMorph_12': 1, 'PredMorph_13': 1, 'PredMorph_14': 1, 'PredMorph_15': 1, 'PredMorph_16': 1, 'PredMorph_17': 1, 'PredMorph_18': 1, 'PredMorph_19': 1, 'PredMorph_20': 1, 'PredMorph_21': 1, 'PredMorph_22': 1, 'PredMorph_23': 1, 'PredMorph_24': 1, 'PredMorph_25': 1, 'PredMorph_26': 1, 'PredMorph_27': 1, 'PredMorph_28': 1, 'PredMorph_29': 1, 'PredMorph_30': 1, 'PredMorph_31': 1, 'PredMorph_32': 1, 'PredMorph_33': 1, 'PredMorph_34': 1, 'PRED_MARKER': 1, 'PASSIVE_VOICE': 1, 'FUNC_00': 49, 'FUNC_01': 49, 'FUNC_02': 49, 'FUNC_03': 49, 'FUNC_04': 49, 'FUNC_05': 49, 'FUNC_06': 49, 'FUNC_07': 49, 'FUNC_08': 49, 'FUNC_09': 49, 'FUNC_10': 49, 'FUNC_11': 49, 'FUNC_12': 49, 'FUNC_13': 49, 'FUNC_14': 49, 'FUNC_15': 49, 'FUNC_16': 49, 'FUNC_17': 49, 'FUNC_18': 49, 'FUNC_19': 49, 'FUNC_20': 49, 'FUNC_21': 49, 'FUNC_CHILD_1': 49, 'FUNC_CHILD_2': 49, 'FUNC_CHILD_3': 49, 'FUNC_GRAND_PARENT': 49, 'FUNC_PARENT': 49, 'LEMMA_CHILD_1': 9071, 'LEMMA_CHILD_2': 9071, 'LEMMA_CHILD_3': 9071, 'LEMMA_GRAND_PARENT': 9071, 'LEMMA_PARENT': 9071, 'GPOS_00': 25, 'GPOS_01': 25, 'GPOS_02': 25, 'GPOS_03': 25, 'GPOS_04': 25, 'GPOS_05': 25, 'GPOS_06': 25, 'GPOS_07': 25, 'GPOS_08': 25, 'GPOS_09': 25, 'GPOS_10': 25, 'GPOS_11': 25, 'GPOS_12': 25, 'GPOS_13': 25, 'GPOS_14': 25, 'GPOS_15': 25, 'GPOS_16': 25, 'GPOS_17': 25, 'GPOS_18': 25, 'GPOS_19': 25, 'GPOS_20': 25, 'GPOS_21': 25, 'GPOS_CHILD_1': 25, 'GPOS_CHILD_2': 25, 'GPOS_CHILD_3': 25, 'GPOS_GRAND_PARENT': 25, 'GPOS_PARENT': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dimension_mapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "dict_keys(['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'LEMMA', 'MORF', 'PRED', 'T'])\n",
       "dict_keys(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED', 'ARG', 'FORM+1', 'FORM+2', 'FORM+3', 'FORM-1', 'FORM-2', 'FORM-3', 'FUNC+1', 'FUNC+2', 'FUNC+3', 'FUNC-1', 'FUNC-2', 'FUNC-3', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'LEMMA-1', 'LEMMA-2', 'LEMMA-3', 'GPOS+1', 'GPOS+2', 'GPOS+3', 'GPOS-1', 'GPOS-2', 'GPOS-3', 'FORM_CTX_P+0', 'FORM_CTX_P+1', 'FORM_CTX_P+2', 'FORM_CTX_P+3', 'FORM_CTX_P-1', 'FORM_CTX_P-2', 'FORM_CTX_P-3', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1', 'FUNC_CTX_P+2', 'FUNC_CTX_P+3', 'FUNC_CTX_P-1', 'FUNC_CTX_P-2', 'FUNC_CTX_P-3', 'PRED_CTX_P+0', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'LEMMA_CTX_P+2', 'LEMMA_CTX_P+3', 'LEMMA_CTX_P-1', 'LEMMA_CTX_P-2', 'LEMMA_CTX_P-3', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1', 'GPOS_CTX_P+2', 'GPOS_CTX_P+3', 'GPOS_CTX_P-1', 'GPOS_CTX_P-2', 'GPOS_CTX_P-3', 'T', 'PRED_DIST', 'PredMorph_01', 'PredMorph_02', 'PredMorph_03', 'PredMorph_04', 'PredMorph_05', 'PredMorph_06', 'PredMorph_07', 'PredMorph_08', 'PredMorph_09', 'PredMorph_10', 'PredMorph_11', 'PredMorph_12', 'PredMorph_13', 'PredMorph_14', 'PredMorph_15', 'PredMorph_16', 'PredMorph_17', 'PredMorph_18', 'PredMorph_19', 'PredMorph_20', 'PredMorph_21', 'PredMorph_22', 'PredMorph_23', 'PredMorph_24', 'PredMorph_25', 'PredMorph_26', 'PredMorph_27', 'PredMorph_28', 'PredMorph_29', 'PredMorph_30', 'PredMorph_31', 'PredMorph_32', 'PredMorph_33', 'PredMorph_34', 'PRED_MARKER', 'PASSIVE_VOICE', 'FUNC_00', 'FUNC_01', 'FUNC_02', 'FUNC_03', 'FUNC_04', 'FUNC_05', 'FUNC_06', 'FUNC_07', 'FUNC_08', 'FUNC_09', 'FUNC_10', 'FUNC_11', 'FUNC_12', 'FUNC_13', 'FUNC_14', 'FUNC_15', 'FUNC_16', 'FUNC_17', 'FUNC_18', 'FUNC_19', 'FUNC_20', 'FUNC_21', 'FUNC_CHILD_1', 'FUNC_CHILD_2', 'FUNC_CHILD_3', 'FUNC_GRAND_PARENT', 'FUNC_PARENT', 'LEMMA_CHILD_1', 'LEMMA_CHILD_2', 'LEMMA_CHILD_3', 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT', 'GPOS_00', 'GPOS_01', 'GPOS_02', 'GPOS_03', 'GPOS_04', 'GPOS_05', 'GPOS_06', 'GPOS_07', 'GPOS_08', 'GPOS_09', 'GPOS_10', 'GPOS_11', 'GPOS_12', 'GPOS_13', 'GPOS_14', 'GPOS_15', 'GPOS_16', 'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1', 'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'])\n"
      ]
@@ -280,142 +298,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{915: 1,\n",
-       " 13299: 1,\n",
-       " 13357: 1,\n",
-       " 14146: 1,\n",
-       " 22437: 1,\n",
-       " 23463: 1,\n",
-       " 39671: 1,\n",
-       " 50043: 1,\n",
-       " 50136: 1,\n",
-       " 50141: 1,\n",
-       " 59212: 1,\n",
-       " 68283: 1,\n",
-       " 79665: 1,\n",
-       " 94117: 1,\n",
-       " 101404: 1,\n",
-       " 104567: 1,\n",
-       " 104592: 1,\n",
-       " 104617: 1,\n",
-       " 104650: 1,\n",
-       " 104690: 1,\n",
-       " 104694: 1,\n",
-       " 105620: 1,\n",
-       " 105746: 1,\n",
-       " 105789: 1,\n",
-       " 105797: 1,\n",
-       " 105827: 1,\n",
-       " 105910: 1,\n",
-       " 105919: 1,\n",
-       " 105966: 1,\n",
-       " 105967: 1,\n",
-       " 105968: 1,\n",
-       " 105969: 1,\n",
-       " 105970: 1,\n",
-       " 105971: 1,\n",
-       " 105972: 1,\n",
-       " 105973: 1,\n",
-       " 105974: 1,\n",
-       " 105975: 1,\n",
-       " 105976: 1,\n",
-       " 105977: 1,\n",
-       " 105978: 1,\n",
-       " 105979: 1,\n",
-       " 105980: 1,\n",
-       " 105981: 1,\n",
-       " 105982: 1,\n",
-       " 105983: 1,\n",
-       " 105984: 1,\n",
-       " 105985: 1,\n",
-       " 105986: 1,\n",
-       " 105987: 1,\n",
-       " 105988: 1,\n",
-       " 105989: 1,\n",
-       " 105990: 1,\n",
-       " 105991: 1,\n",
-       " 105992: 1,\n",
-       " 105993: 1,\n",
-       " 105994: 1,\n",
-       " 105995: 1,\n",
-       " 105996: 1,\n",
-       " 105997: 1,\n",
-       " 105998: 1,\n",
-       " 105999: 1,\n",
-       " 106000: 1,\n",
-       " 106001: 1,\n",
-       " 106002: 1,\n",
-       " 115073: 1,\n",
-       " 124144: 1,\n",
-       " 133215: 1,\n",
-       " 150344: 1,\n",
-       " 151357: 1,\n",
-       " 151382: 1,\n",
-       " 151407: 1,\n",
-       " 151432: 1,\n",
-       " 151477: 1,\n",
-       " 151482: 1,\n",
-       " 151531: 1,\n",
-       " 151580: 1,\n",
-       " 151629: 1,\n",
-       " 151720: 1,\n",
-       " 151744: 1,\n",
-       " 151772: 1,\n",
-       " 151777: 1,\n",
-       " 151802: 1,\n",
-       " 151827: 1,\n",
-       " 151852: 1,\n",
-       " 151877: 1,\n",
-       " 151902: 1,\n",
-       " 151927: 1,\n",
-       " 151952: 1,\n",
-       " 151977: 1,\n",
-       " 152002: 1,\n",
-       " 152027: 1,\n",
-       " 152052: 1,\n",
-       " 152077: 1,\n",
-       " 152102: 1,\n",
-       " 152127: 1,\n",
-       " 152152: 1,\n",
-       " 152177: 1,\n",
-       " 152202: 1,\n",
-       " 152227: 1,\n",
-       " 152252: 1,\n",
-       " 152285: 1,\n",
-       " 152368: 1,\n",
-       " 152375: 1,\n",
-       " 152424: 1,\n",
-       " 152473: 1,\n",
-       " 152522: 1,\n",
-       " 152571: 1,\n",
-       " 152620: 1,\n",
-       " 152669: 1,\n",
-       " 152718: 1,\n",
-       " 152767: 1,\n",
-       " 152816: 1,\n",
-       " 152865: 1,\n",
-       " 152914: 1,\n",
-       " 152963: 1,\n",
-       " 153012: 1,\n",
-       " 153061: 1,\n",
-       " 153110: 1,\n",
-       " 153159: 1,\n",
-       " 153208: 1,\n",
-       " 153257: 1,\n",
-       " 153306: 1}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
     }
    ],
+   "source": [
+    "print(len(columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "args = [] \n",
     "sparse_features = defaultdict(dict)\n",
@@ -425,13 +327,14 @@
     "    lb = 1 \n",
     "    for col in columns:\n",
     "        base_col = columns_mapper[col]\n",
-    "        categorical = d[col][idx] \n",
-    "        if base_col in lexicons and categorical in lexicons[base_col]:\n",
-    "            idx1 = lexicons[base_col][categorical]\n",
-    "            sparse_features[idx][lb + idx1]=1 \n",
-    "        else:\n",
-    "            # nan set to zero\n",
-    "            sparse_features[idx][lb]=1 \n",
+    "        value = d[col][idx] \n",
+    "        if value is not None and isinstance(value, str):\n",
+    "                idx1 = lexicons[base_col][value]\n",
+    "                sparse_features[idx][lb + idx1]=1 \n",
+    "        elif not isnan(value):\n",
+    "            if value != 0:\n",
+    "                # nan set to zero\n",
+    "                sparse_features[idx][lb]= int(value) \n",
     "        lb += dimension_mapper[col] \n",
     "\n",
     "    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
