svm: notebook & propbank_encoder updates

--- a/notebooks/08-svm_builder.ipynb
+++ b/notebooks/08-svm_builder.ipynb
@@ -9,13 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../datasets')\n",
-    "\n",
+    "sys.path.append('../models')\n",
     "\n",
     "\n",
     "from collections import defaultdict\n",
@@ -25,7 +27,9 @@
     "import re\n",
     "import math\n",
     "import numpy as np\n",
+    "import os.path\n",
     "\n",
+    "from propbank_encoder import PropbankEncoder\n",
     "from gensim.models import KeyedVectors\n",
     "from data_propbankbr import propbankbr_arg2t\n",
     "\n",
@@ -33,6 +37,7 @@
     "SCHEMAS_DIR = '../datasets/schemas/'\n",
     "SVM_DIR = '../datasets/svms/'\n",
     "EMBEDDINGS_DIR = '../datasets/txts/embeddings/'\n",
+    "BINARIES_DIR = '../datasets/binaries/'\n",
     "\n",
     "GS_PATH = '{:}{:}'.format(DATASETS_DIR, 'gs.csv')\n",
     "GS_SCHEMA_PATH = '{:}{:}'.format(SCHEMAS_DIR, 'gs.yaml')\n",
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,6 +159,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching word2vec...\n",
+      "Fetching word2vec... done\n",
+      "Fetching corpus-word-missing-pers.txt...\n",
+      "Fetching corpus-word-missing-pers.txt...done\n",
+      "Fetching corpus-word-missing-locs.txt...\n",
+      "Fetching corpus-word-missing-locs.txt...done\n",
+      "Fetching corpus-word-missing-orgs.txt...\n",
+      "Fetching corpus-word-missing-orgs.txt...done\n",
+      "Preprocess finished. Found 14275 of 14908 words, missing 4.25%\n",
+      "# UNIQUE TOKENIZED 14908, # EMBEDDED TOKENS 12038\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbname = 'svm_glo50'\n",
+    "path_svm = BINARIES_DIR + dbname + '.pickle'\n",
+    "if os.path.isfile(path_svm):\n",
+    "    propbank_encoder = PropbankEncoder.recover(path_svm)\n",
+    "else:\n",
+    "    propbank_encoder = PropbankEncoder(df.to_dict(), dictschema, language_model='glove_s50', dbname=dbname)\n",
+    "    propbank_encoder.persist(BINARIES_DIR, filename=dbname)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -248,30 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['ARG', 'CTREE', 'DTREE', 'FORM', 'FUNC', 'GPOS', 'LEMMA', 'MORF', 'PRED', 'T'])\n",
       "dict_keys(['ID', 'S', 'P', 'P_S', 'FORM', 'LEMMA', 'GPOS', 'MORF', 'DTREE', 'FUNC', 'CTREE', 'PRED', 'ARG', 'FORM+1', 'FORM+2', 'FORM+3', 'FORM-1', 'FORM-2', 'FORM-3', 'FUNC+1', 'FUNC+2', 'FUNC+3', 'FUNC-1', 'FUNC-2', 'FUNC-3', 'LEMMA+1', 'LEMMA+2', 'LEMMA+3', 'LEMMA-1', 'LEMMA-2', 'LEMMA-3', 'GPOS+1', 'GPOS+2', 'GPOS+3', 'GPOS-1', 'GPOS-2', 'GPOS-3', 'FORM_CTX_P+0', 'FORM_CTX_P+1', 'FORM_CTX_P+2', 'FORM_CTX_P+3', 'FORM_CTX_P-1', 'FORM_CTX_P-2', 'FORM_CTX_P-3', 'FUNC_CTX_P+0', 'FUNC_CTX_P+1', 'FUNC_CTX_P+2', 'FUNC_CTX_P+3', 'FUNC_CTX_P-1', 'FUNC_CTX_P-2', 'FUNC_CTX_P-3', 'PRED_CTX_P+0', 'LEMMA_CTX_P+0', 'LEMMA_CTX_P+1', 'LEMMA_CTX_P+2', 'LEMMA_CTX_P+3', 'LEMMA_CTX_P-1', 'LEMMA_CTX_P-2', 'LEMMA_CTX_P-3', 'GPOS_CTX_P+0', 'GPOS_CTX_P+1', 'GPOS_CTX_P+2', 'GPOS_CTX_P+3', 'GPOS_CTX_P-1', 'GPOS_CTX_P-2', 'GPOS_CTX_P-3', 'T', 'PRED_DIST', 'PredMorph_01', 'PredMorph_02', 'PredMorph_03', 'PredMorph_04', 'PredMorph_05', 'PredMorph_06', 'PredMorph_07', 'PredMorph_08', 'PredMorph_09', 'PredMorph_10', 'PredMorph_11', 'PredMorph_12', 'PredMorph_13', 'PredMorph_14', 'PredMorph_15', 'PredMorph_16', 'PredMorph_17', 'PredMorph_18', 'PredMorph_19', 'PredMorph_20', 'PredMorph_21', 'PredMorph_22', 'PredMorph_23', 'PredMorph_24', 'PredMorph_25', 'PredMorph_26', 'PredMorph_27', 'PredMorph_28', 'PredMorph_29', 'PredMorph_30', 'PredMorph_31', 'PredMorph_32', 'PredMorph_33', 'PredMorph_34', 'PRED_MARKER', 'PASSIVE_VOICE', 'FUNC_00', 'FUNC_01', 'FUNC_02', 'FUNC_03', 'FUNC_04', 'FUNC_05', 'FUNC_06', 'FUNC_07', 'FUNC_08', 'FUNC_09', 'FUNC_10', 'FUNC_11', 'FUNC_12', 'FUNC_13', 'FUNC_14', 'FUNC_15', 'FUNC_16', 'FUNC_17', 'FUNC_18', 'FUNC_19', 'FUNC_20', 'FUNC_21', 'FUNC_CHILD_1', 'FUNC_CHILD_2', 'FUNC_CHILD_3', 'FUNC_GRAND_PARENT', 'FUNC_PARENT', 'LEMMA_CHILD_1', 'LEMMA_CHILD_2', 'LEMMA_CHILD_3', 'LEMMA_GRAND_PARENT', 'LEMMA_PARENT', 'GPOS_00', 'GPOS_01', 'GPOS_02', 'GPOS_03', 'GPOS_04', 'GPOS_05', 'GPOS_06', 'GPOS_07', 'GPOS_08', 'GPOS_09', 'GPOS_10', 'GPOS_11', 'GPOS_12', 'GPOS_13', 'GPOS_14', 'GPOS_15', 'GPOS_16', 'GPOS_17', 'GPOS_18', 'GPOS_19', 'GPOS_20', 'GPOS_21', 'GPOS_CHILD_1', 'GPOS_CHILD_2', 'GPOS_CHILD_3', 'GPOS_GRAND_PARENT', 'GPOS_PARENT'])\n"
      ]
     }
    ],
    "source": [
-    "lexicons = {col : dict(zip(dictschema[col]['domain'], range(dimension_mapper[col])))\n",
-    "             for col in dictschema if  col in dictschema and 'domain' in dictschema[col]}\n",
+    "# lexicons = {col : dict(zip(dictschema[col]['domain'], range(dimension_mapper[col])))\n",
+    "#              for col in dictschema if  col in dictschema and 'domain' in dictschema[col]}\n",
     "\n",
     "\n",
     "columns_gs  = ['FORM', 'FUNC', 'GPOS', 'LEMMA', 'PRED']\n",
@@ -298,13 +325,13 @@
     "\n",
     "d = df.to_dict()\n",
     "\n",
-    "print(lexicons.keys())\n",
+    "# print(lexicons.keys())\n",
     "print(d.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,87 +348,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def to_svm(ds_type, propbank_encoder, columns):\n",
+    "    '''\n",
+    "        Extracts propbank data into SVM sparse format\n",
+    "        args:\n",
+    "            ds_type          .: dataset type in ('train', 'valid', 'test')\n",
+    "            propbank_encoder .: object\n",
+    "\n",
+    "        returns:\n",
+    "            svm_examples .: dict<int, str> in svm examples in sparse format\n",
+    "    '''\n",
+    "    svmex = defaultdict(dict)\n",
+    "    coldims = propbank_encoder.columns_dimensions('HOT')\n",
+    "    iterator = propbank_encoder.iterator(ds_type, filter_columns=columns, encoding='IDX')\n",
+    "    target = propbank_encoder.column(ds_type, 'T', 'IDX')\n",
+    "    i  = 0 \n",
+    "    for t, d in iterator:\n",
+    "        line = ''\n",
+    "        lb = 1 \n",
+    "        i +=1 \n",
+    "        for col, val in d.items():\n",
+    "            dim  = coldims[col]\n",
+    "            if (isinstance(val,int) and not np.isnan(val)):\n",
+    "                if dim > 1: # categorical\n",
+    "                    line += ' {:}:1'.format(lb + int(val))\n",
+    "                else: # numerical\n",
+    "                    line += ' {:}:{:}'.format(lb, int(val))\n",
+    "            lb += dim\n",
+    "        line = '{:} {:}'.format(target[t],line)\n",
+    "        svmex[t] = line\n",
+    "    return svmex    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for ds_type in ('train', 'test', 'valid'):            \n",
+    "    # saves the processed data\n",
+    "    svm_path = '{:}/{:}/{:}.svm'.format(SVM_DIR, 'hot', ds_type)\n",
+    "    ex = to_svm(ds_type, propbank_encoder, columns)\n",
+    "    with open(svm_path, mode='w') as f:\n",
+    "        for t in ex:\n",
+    "            f.write(ex[t] + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{915: 1,\n",
-       " 13299: 1,\n",
-       " 13357: 1,\n",
-       " 14146: 1,\n",
-       " 22437: 1,\n",
-       " 39671: 1,\n",
-       " 50136: 1,\n",
-       " 79665: 1,\n",
-       " 94117: 1,\n",
-       " 101404: 1,\n",
-       " 104650: 1,\n",
-       " 104690: 1,\n",
-       " 104694: 1,\n",
-       " 105620: 1,\n",
-       " 105746: 1,\n",
-       " 105789: 1,\n",
-       " 105797: 1,\n",
-       " 105827: 1,\n",
-       " 105910: 1,\n",
-       " 105919: 1,\n",
+       "{914: 1,\n",
+       " 13298: 1,\n",
+       " 13356: 1,\n",
+       " 14145: 1,\n",
+       " 22436: 1,\n",
+       " 39670: 1,\n",
+       " 50135: 1,\n",
+       " 79664: 1,\n",
+       " 94116: 1,\n",
+       " 101403: 1,\n",
+       " 104649: 1,\n",
+       " 104689: 1,\n",
+       " 104693: 1,\n",
+       " 105619: 1,\n",
+       " 105745: 1,\n",
+       " 105788: 1,\n",
+       " 105796: 1,\n",
+       " 105826: 1,\n",
+       " 105909: 1,\n",
+       " 105918: 1,\n",
        " 105977: 1,\n",
        " 105996: 1,\n",
        " 106000: 4,\n",
-       " 150344: 1,\n",
-       " 151477: 1,\n",
-       " 151720: 1,\n",
-       " 151744: 1,\n",
-       " 151772: 1,\n",
-       " 152285: 1,\n",
-       " 152368: 1}"
+       " 150343: 1,\n",
+       " 151476: 1,\n",
+       " 151719: 1,\n",
+       " 151743: 1,\n",
+       " 151771: 1,\n",
+       " 152284: 1,\n",
+       " 152367: 1}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "args = [] \n",
-    "sparse_features = defaultdict(dict)\n",
-    "propositions = []        \n",
+    "#args = [] \n",
+    "#sparse_features = defaultdict(dict)\n",
+    "#propositions = []        \n",
     "\n",
-    "for idx, propid in d['P'].items():\n",
-    "    lb = 1 \n",
-    "    for col in columns:\n",
-    "        base_col = columns_mapper[col]\n",
-    "        value = d[col][idx] \n",
-    "        if value is not None and isinstance(value, str):\n",
-    "                idx1 = lexicons[base_col][value]\n",
-    "                sparse_features[idx][lb + idx1]=1 \n",
-    "        elif not np.isnan(value):\n",
-    "            if value != 0:\n",
-    "                # nan set to zero\n",
-    "                sparse_features[idx][lb]= int(value) \n",
-    "        lb += dimension_mapper[col] \n",
-    "\n",
-    "    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
-    "    propositions.append( propid )\n",
+    "#for idx, propid in d['P'].items():\n",
+    "#    lb = 1 \n",
+    "#    for col in columns:\n",
+    "#        base_col = columns_mapper[col]\n",
+    "#        value = d[col][idx] \n",
+    "#        if value is not None and isinstance(value, str):\n",
+    "#                idx1 = lexicons[base_col][value]\n",
+    "#                sparse_features[idx][lb + idx1]=1 \n",
+    "#        elif not np.isnan(value):\n",
+    "#            if value != 0:\n",
+    "#                # nan set to zero\n",
+    "#                sparse_features[idx][lb]= int(value) \n",
+    "#        lb += dimension_mapper[col] \n",
+    "#\n",
+    "#    args.append(lexicons['ARG'][d['ARG'][idx]]) \n",
+    "#    propositions.append( propid )\n",
     "\n",
     "        \n",
-    "sparse_features[0]"
+    "#sparse_features[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[59, 1, 59, 60, 58]"
+       "[58, 0, 58, 59, 57]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +586,7 @@
        "[1 rows x 163 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +616,7 @@
        "['*', 'A0', 'A0', 'A0', 'V']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -566,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
